// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Col /> Component render <Col /> 1`] = `
<div
  class="col"
  data-testid="col"
>
  <h1>
    Col component
  </h1>
</div>
`;

exports[`<Col /> Component render <Col /> component with col boolean props 1`] = `
<div
  class="col col-sm col-md col-lg col-xl col-xxl"
  data-testid="col"
>
  <h1>
    Col with col boolean props
  </h1>
</div>
`;

exports[`<Col /> Component render <Col /> component with col props 1`] = `
<div
  class="col-6 col-sm-7 col-md-8 col-lg-9 col-xl-10 col-xxl-11"
  data-testid="col"
>
  <h1>
    Col with col props
  </h1>
</div>
`;

exports[`<Col /> Component render <Col /> component with offset props 1`] = `
<div
  class="col offset-1 offset-sm-2 offset-md-3 offset-lg-4 offset-xl-5 offset-xxl-6"
  data-testid="col"
>
  <h1>
    Col with offset props
  </h1>
</div>
`;

exports[`<Col /> Component render <Col /> component with order props 1`] = `
<div
  class="col order-0 order-sm-1 order-md-2 order-lg-3 order-xl-4 order-xxl-5"
  data-testid="col"
>
  <h1>
    Col with order props
  </h1>
</div>
`;

exports[`<Col /> Component render <Col /> with margin props 1`] = `
<div
  class="col m-0 m-sm-1 m-md-2 m-lg-3 m-xl-4 m-xxl-5 mx-0 mx-sm-1 mx-md-2 mx-lg-3 mx-xl-4 mx-xxl-5 my-0 my-sm-1 my-md-2 my-lg-3 my-xl-4 my-xxl-5 mb-0 mb-sm-1 mb-md-2 mb-lg-3 mb-xl-4 mb-xxl-5 mt-0 mt-sm-1 mt-md-2 mt-lg-3 mt-xl-4 mt-xxl-5 ms-0 ms-sm-1 ms-md-2 ms-lg-3 ms-xl-4 ms-xxl-5 me-0 me-sm-1 me-md-2 me-lg-3 me-xl-4 me-xxl-5"
  data-testid="col"
>
  <h1>
    Col component with margin props
  </h1>
</div>
`;

exports[`<Col /> Component render <Col /> with padding props 1`] = `
<div
  class="col p-0 p-sm-1 p-md-2 p-lg-3 p-xl-4 p-xxl-5 px-0 px-sm-1 px-md-2 px-lg-3 px-xl-4 px-xxl-5 py-0 py-sm-1 py-md-2 py-lg-3 py-xl-4 py-xxl-5 pb-0 pb-sm-1 pb-md-2 pb-lg-3 pb-xl-4 pb-xxl-5 pt-0 pt-sm-1 pt-md-2 pt-lg-3 pt-xl-4 pt-xxl-5 ps-0 ps-sm-1 ps-md-2 ps-lg-3 ps-xl-4 ps-xxl-5 pe-0 pe-sm-1 pe-md-2 pe-lg-3 pe-xl-4 pe-xxl-5"
  data-testid="col"
>
  <h1>
    Col with padding props
  </h1>
</div>
`;
